--- a/views/shop.html
+++ b/views/shop.html
@@ -67,7 +67,11 @@
     <main>
         <h1>my products</h1>
         <p>
-            list of my products.....  </p>
+            list of my products.....  
+        </p>
+        
+           
+        
 
     </main>
 </body>
